[gd_scene load_steps=2 format=3 uid="uid://bqxvn8ywxqhq0"]

[ext_resource type="Script" path="res://SimpleDialog.gd" id="1_simple"]

[node name="SimpleDialog" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 550.0
offset_bottom = 280.0
script = ExtResource("1_simple")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 0.95)

[node name="Border" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.8, 0.8, 1)

[node name="InnerBackground" type="ColorRect" parent="Background/Border"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Border/InnerBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="Background/Border/InnerBackground/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "TIPS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Background/Border/InnerBackground/VBoxContainer"]
layout_mode = 2
theme_override_colors/separator = Color(0.6, 0.6, 0.6, 1)
theme_override_constants/separation = 2

[node name="ContentContainer" type="MarginContainer" parent="Background/Border/InnerBackground/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="ContentLabel" type="Label" parent="Background/Border/InnerBackground/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
text = "Dialog text will appear here..."
autowrap_mode = 3
vertical_alignment = 0

[node name="Footer" type="MarginContainer" parent="Background/Border/InnerBackground/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="FooterLabel" type="Label" parent="Background/Border/InnerBackground/VBoxContainer/Footer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Close(Space)"
horizontal_alignment = 2